Updated eocfm content
Updated eocfm content to the latest couple minor reference bugs still to clear.

--- a/localization/english/eocfm_events_l_english.yml
+++ b/localization/english/eocfm_events_l_english.yml
@@ -401,74 +401,43 @@
  eocfm.300.f: "Where countless attempts failed over the centuries since the losses of Rome and Konstantinopolis, the Empire stands resurgent today. However, much work remains: numerous Greeks are ruled by heretics and heathens, formerly Roman lands remain within the grasp of foreign pretenders, and countless Romaíon treasures are kept hostage abroad. The [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] must be sure to live up to the expectations of [ROOT.GetCountry.GetRuler.GetHerHis] subjects if [ROOT.GetCountry.GetRuler.GetSheHe] is to bring glory to [ROOT.GetCountry.GetName]."
  eocfm.300.a: "Our Church is Universal."
  eocfm.301.t: "The Metropolitan Lands"
- eocfm.301.d: "Our efforts have borne fruit with the rebirth of the [ROOT.GetCountry.GetName]. Now several voices call for the restoration of [ROOT.GetCountry.GetAdjectiveNoFormatting] power and prestige with the return of formerly Romaíon lands to Greek hands. It falls to the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] to determine the future of the [ROOT.GetCountry.GetAdjectiveNoFormatting] state."
- eocfm.301.f: ""The Kingdom of Greece is not Greece; it is merely a part: the smallest, poorest part of Greece. The Greek is not only he who inhabits the Kingdom, but also he who inhabits Ioannina, Salonika or Serres or Adrianople or Konstantinopolis or Trebizond or Crete or Samos or any other region belonging to the Greek history or the Greek race... There are two great centres of Hellenism. Athens is the capital of the Kingdom. Konstantinopolis is the great capital, the dream and hope of all Greeks." -I. Kolettis, 1844"
- eocfm.301.a: "We will restore the glory of the [ROOT.GetCountry.GetName]."
- eocfm.301.b: "We will limit ourselves to the Balkans."
- eocfm.301.c: "We will limit ourselves to Anatolia."
- eocfm.302.t: "Nova Roma Constantinopolitana"
- eocfm.302.d: "With Anatolia and the Balkans firmly within our grasp, the old heart of the Empire has been reclaimed!"
- eocfm.302.f: "Almost one thousand years ago, Basileus Isaac I Komnenos augustly led the Empire into an era of renewed might and glory. With the old heartlands reclaimed, the heart of the Eastern Roman Empire has been restored and the seat of the Orthodox Patriarch reinstated."
- eocfm.302.a: "Hail to the Basileus! Glory to Basileía Romaíon!"
- eocfm.303.t: "Into the Holy Land"
- eocfm.303.d: "The ancient heartlands of the Greek people now lie in our control. Prominent voices in the [ROOT.GetCountry.GetAdjectiveNoFormatting] court call for the return of Egypt and the Levant, once strongholds of Christendom, into the Imperial Ecumene."
- eocfm.303.f: "For over two millennia, Greek culture held sway across the eastern mediterranean. Today, the old Greek cities lie in ruins and the old bastions of Christendom wither under their Muslim holders."
- eocfm.303.a: "We will reclaim the Eastern Empire."
- eocfm.303.b: "We have reclaimed the Greek heartlands. This is enough." 
- eocfm.304.t: "The Church of the East"
- eocfm.304.d: "Our conquests have finally rescued the cradle of Christendom after over a millennium of oppression. Now, the Patriarchs work diligently to restore the churches shuttered during Muslim rule. After debates and deliberations, the Patriarch of Konstantinopolis along with the other Patriarchs of the East have called for a new crusade against the heathens that still threaten our borders, this time without the treacherous armies of the Pope in the West."
- eocfm.304.f: ""For the Fathers rightly granted privileges to the throne of old Rome, because it was the royal city. And the One Hundred and Fifty most religious Bishops, actuated by the same consideration, gave equal privileges to the most holy throne of New Rome, justly judging that the city which is honoured with the Sovereignty and the Senate and enjoys equal privileges with the old imperial Rome, should in ecclesiastical matters also be magnified as she is, and rank next after her." -Canon XXVIII, Council of Chalcedon, 451"
- eocfm.304.a: "All faithful shall be sheltered by the Patriarchs."
- eocfm.304.b: "The Eastern Church is whole, let us count our blessings."
- eocfm.305.t: "The Orthodox Realms"
- eocfm.305.d: "The Russian [SCOPE.sCountry('russia_scope').GetRuler.GetPrimaryRoleTitle], [SCOPE.sCountry('russia_scope').GetRuler.GetFullName] claims a protectorate over the Christians in the Rus and, by extension, the [ROOT.GetCountry.GetName]."
- eocfm.305.f: ""So know, pious king, that all the Christian kingdoms came to an end and came together in a single kingdom of yours, two Romes have fallen, the third stands, and there will be no fourth. No one shall replace your Christian Tsardom according to the great Theologian.""
- eocfm.305.a: "Konstantinopolis is the true seat of the East."
- eocfm.306.t: "Across the Hospitable Sea"
- eocfm.306.d: "We are unchallenged in our control of the heartlands of Christendom. The last obstacle to our authority remains in the form of the Russian Orthodoxy, which still claims supremacy over the Eastern Church."
- eocfm.306.f: "The [ROOT.GetCountry.GetName] once held sway over the Black Sea. Even today, communities of Orthodox Greeks dot its shores. Before setting our eyes on the usurpers to the north, we must first liberate our countrymen from the Slavic yoke."
- eocfm.306.a: "Ready the fleet!"
- eocfm.307.t: "Moscow, the Third Rome"
- eocfm.307.d: "We have succeeded in bringing exploited Orthodox peoples into our protective hold. As the Orthodox faithful turn to the Ecumenical Patriarchate, our eyes now fall on the great pretender, [SCOPE.sCountry('russia_scope').GetName]."
- eocfm.307.f: "From their false throne in the Trinity Lavra, the Russian pretenders continue to assert their baseless claims of suzerainty over the Orthodox peoples."
- eocfm.307.a: "We will bring these Russian pretenders to heel."
- eocfm.308.t: "The Supremacy of Constantinopole"
- eocfm.308.d: "From the cataphracts of the Nile to the tributaries of the Dneiper, the lands of the Orthodoxy have come under over protective watch."
- eocfm.308.f: "The Patriarchs have hailed a new era of peace and prosperity with themselves at the head of the eastern realms of Christendom."
- eocfm.308.a: "The Orthodoxy will lead us into the future."
- eocfm.308.b: "Konstantinopolis will be the beacon of Christendom."
- 
- eocfm.310.t: "The Capture of the Great Mosque"
- eocfm.310.d: "Our righteous crusades against the Saracens have brought their jewel, the heathen city of Mecca, into our grasp."
- eocfm.310.f: "One by one, rank after rank soldiers of Basileía Romaíon advanced into the city. There we beheld the Great Mosque, and at its heart the pagan relic, the al-Ḥajaru al-Aswad... the #black Black Stone#!."
- eocfm.310.a: "We bring no peace. Burn it all down."
- eocfm.310.b: "We will turn it into a museum."
- eocfm.310.c: "The Saracens kept peace in Jerusalem. We will keep peace in Mecca."
- 
- eocfm.314.t: "The Ancient Patriarchates"
- eocfm.314.d: "After centuries of separation, the great seats of Eastern Christendom have been returned to the rule of the Emperor in Konstantinopolis."
- eocfm.314.f: "With the heartlands of Eastern Christianity within our control, religious and social leaders call for the reunification of the Imperial Office with that of the Orthodoxy."
- eocfm.314.a: "Mother Mary smiles upon us."
- eocfm.315.t: "The Restoration of the Pentarchy"
- eocfm.315.d: "By the Grace of God and through the valiant efforts of the [ROOT.GetCountry.GetAdjectiveNoFormatting] state, we have brought all five of the original seats of Christianity under the umbrella of the Orthodoxy. In an auspicious ceremony in the heart of the Vatican, the Patriarchs of the Church have declared [ROOT.GetCountry.GetName] to be the sole defender of and authority over the Church of the East."
- eocfm.315.f: "As it was in Roman times, the church is once again unified under the control of a singular state that both supports and oversees its ecclesiastic functions."
- eocfm.315.a: "Glory to [ROOT.GetCountry.GetName]"
- eocfm.316.t: "Challenging the Patriarch of the West"
- eocfm.316.d: "[SCOPE.sCountry('eocfm_usurper_scope').GetName] has sent shockwaves across the Christian world by laying claim to direct authority over the Throne of Saint Peter itself. As Orthodox priests pour into the Vatican, the ecclesiastic leaders of the Catholic church have wasted no time in condemning the Orthodoxy for bringing destruction upon the faith."
- eocfm.316.f: "At the command of the state, hundreds of Orthodox bishops have stormed into Rome, securing conversions of any pliable preists and ejecting any that refuse our rule."
- eocfm.316.a: "The true Church will not be denied."
- eocfm.316.b: "This is an affront to divine order."
- eocfm.317.t: "The Throne of Saint Peter"
- eocfm.317.d: "Following months of arduous work from paperwork to appointments, the ecclesiarchy of the Vatican has been replaced with bishops loyal to us. While the Catholic church at large may reject our administration, they can not longer deny us the western seat of the Church."
- eocfm.317.f: "For centuries, Rome has led the Catholic church in apostacy against the true church of Konstantinopolis. This lie will continue no longer."
- eocfm.317.a: "All for the Glory of God."
- eocfm.318.t: "The Council of Unification"
- eocfm.318.d: "[SCOPE.sCountry('eocfm_mending_country_scope').GetName] has convoked an Ecumenical Council to declare their intent to unify the two largest branches of Christianity. While we may control the seat of the West, there remains a herculean amount of work to be done."
- eocfm.318.f: "The churches of the East and West agree on overarching concepts of faith, but nearly a millennium of Schism has introduced tremendous deviations that must be reconciled before we can dream of a united church."
- eocfm.318.a: "Will Christendom be whole once more?"
- eocfm.318.tt: "This process is expected to take up to #bold 20 years#!"
- eocfm.319.t: "The Supreme Pontiff of the Universal Church"
- eocfm.319.d: "Flanked by the [ROOT.GetCountry.GetAdjectiveNoFormatting]-backed Patriarchs, the Ecumenical Patriarch, [SCOPE.sCharacter('eocfm_patriarch_event_scope').GetFirstName], has declared the successful unification of the two Churches into a Great Mother Church. In celebration, he has extended offers to all [GetReligion('catholic').GetName] nations to join the unified Church."
- eocfm.319.f: "After unity was dealt a death blow by the Fourth Crusade, the majority of Christendom assumed that reconciliation between East and West was nothing more that a pipe dream. Despite this, [ROOT.GetCountry.GetName] has overcome the odds to bring the ideals of Ecumenism into reality.
- eocfm.319.a: "My God have mercy on Christianity."
+ eocfm.301.d: "Our efforts have borne fruit with the rebirth of the [ROOT.GetCountry.GetName]. Now several voices call for the restoration of [ROOT.GetCountry.GetAdjectiveNoFormatting] power and prestige with the return of formerly Byzantine lands to Greek hands. It falls to the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] to determine the future of the [ROOT.GetCountry.GetAdjectiveNoFormatting] state."
+ eocfm.301.f: ""For the Fathers rightly granted privileges to the throne of old Rome, because it was the royal city. And the One Hundred and Fifty most religious Bishops, actuated by the same consideration, gave equal privileges to the most holy throne of New Rome, justly judging that the city which is honoured with the Sovereignty and the Senate and enjoys equal privileges with the old imperial Rome, should in ecclesiastical matters also be magnified as she is, and rank next after her." -Canon XXVIII, Council of Chalcedon, 451"
+ eocfm.301.a: "All faithful shall be sheltered by the Patriarchs."
+ eocfm.302.t: "The Orthodox Realms"
+ eocfm.302.d: "Our conquests have finally rescued Eastern Christendom after over a millennium of oppression. Now, the Patriarchs work diligently to restore the churches shuttered during Muslim rule. After debates and deliberations, the Patriarch of Constantinople along with the other Patriarchs of the East have declared the birth of a unified [GetReligion('orthodox').GetName] Domain."
+ eocfm.302.f: ""So know, pious king, that all the Christian kingdoms came to an end and came together in a single kingdom of yours, two Romes have fallen, the third stands, and there will be no fourth. No one shall replace your Christian Tsardom according to the great Theologian.""
+ eocfm.302.a: "The Eastern Church is whole, let us count our blessings."
+ eocfm.303.t: "The Capture of the Great Mosque"
+ eocfm.303.d: "Our righteous crusades against the Saracens have brought their jewel, the heathen city of Mecca, into our grasp."
+ eocfm.303.f: "One by one, rank after rank of Byzantine soldiers advanced into the city. There we beheld the Great Mosque, and at its heart the pagan relic, the al-Ḥajaru al-Aswad... the #black Black Stone#!."
+ eocfm.303.a: "We bring no peace. Burn it all down."
+ eocfm.303.b: "We will turn it into a museum."
+ eocfm.303.c: "The Saracens kept peace in Jerusalem. We will keep peace in Mecca."
+ eocfm.304.t: "The Ancient Patriarchates"
+ eocfm.304.d: "After centuries of separation, the great seats of Eastern Christendom have been returned to the rule of the Emperor in Constantinople."
+ eocfm.304.f: "With the heartlands of Eastern Christianity within our control, religious and social leaders call for the reunification of the Imperial Office with that of the Orthodoxy."
+ eocfm.304.a: "Mother Mary smiles upon us."
+ eocfm.305.t: "The Restoration of the Pentarchy"
+ eocfm.305.d: "By the Grace of God and through the valiant efforts of the [ROOT.GetCountry.GetAdjectiveNoFormatting] state, we have brought all five of the original seats of Christianity under the umbrella of the Orthodoxy. In an auspicious ceremony in the heart of the Vatican, the Patriarchs of the Church have declared [ROOT.GetCountry.GetName] to be the sole defender of and authority over the Church of the East."
+ eocfm.305.f: "As it was in Roman times, the church is once again unified under the control of a singular state that both supports and oversees its ecclesiastic functions."
+ eocfm.305.a: "Glory to [ROOT.GetCountry.GetName]"
+ eocfm.306.t: "Challenging the Patriarch of the West"
+ eocfm.306.d: "[SCOPE.sCountry('eocfm_usurper_scope').GetName] has sent shockwaves across the Christian world by laying claim to direct authority over the Throne of Saint Peter itself. As Orthodox priests pour into the Vatican, the ecclesiastic leaders of the Catholic church have wasted no time in condemning the Orthodoxy for bringing destruction upon the faith."
+ eocfm.306.f: "At the command of the state, hundreds of Orthodox bishops have stormed into Rome, securing conversions of any pliable preists and ejecting any that refuse our rule."
+ eocfm.306.a: "The true Church will not be denied."
+ eocfm.306.b: "This is an affront to divine order."
+ eocfm.307.t: "The Throne of Saint Peter"
+ eocfm.307.d: "Following months of arduous work from paperwork to appointments, the ecclesiarchy of the Vatican has been replaced with bishops loyal to us. While the Catholic church at large may reject our administration, they can not longer deny us the western seat of the Church."
+ eocfm.307.f: "For centuries, Rome has led the Catholic church in apostacy against the true church of Constantinople. This lie will continue no longer."
+ eocfm.307.a: "All for the Glory of God."
+ eocfm.308.t: "The Council of Unification"
+ eocfm.308.d: "[SCOPE.sCountry('eocfm_mending_country_scope').GetName] has convoked an Ecumenical Council to declare their intent to unify the two largest branches of Christianity. While we may control the seat of the West, there remains a herculean amount of work to be done."
+ eocfm.308.f: "The churches of the East and West agree on overarching concepts of faith, but nearly a millennium of Schism has introduced tremendous deviations that must be reconciled before we can dream of a united church."
+ eocfm.308.a: "Will Christendom be whole once more?"
+ eocfm.308.tt: "This process is expected to take up to #bold 20 years#!"
+ eocfm.309.t: "The Supreme Pontiff of the Universal Church"
+ eocfm.309.d: "Flanked by the [ROOT.GetCountry.GetAdjectiveNoFormatting]-backed Patriarchs, the Ecumenical Patriarch, [SCOPE.sCharacter('eocfm_patriarch_event_scope').GetFirstName], has declared the successful unification of the two Churches into a Great Mother Church. In celebration, he has extended offers to all [GetReligion('catholic').GetName] nations to join the unified Church."
+ eocfm.309.f: "After unity was dealt a death blow by the Fourth Crusade, the majority of Christendom assumed that reconciliation between East and West was nothing more that a pipe dream. Despite this, [ROOT.GetCountry.GetName] has overcome the odds to bring the ideals of Ecumenism into reality.
+ eocfm.309.a: "My God have mercy on Christianity."
  
